--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.04.2022 08:45:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.04.2022 09:11:45</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -21,7 +21,7 @@
 						</span>
 </p>
 <p>
-<strong>Boloňské Špagety s parmazánem a rukolou</strong>
+<strong>Vepřová plec na slanině a tymiánu s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -143,7 +143,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se peruanskou cibulovou salsou, frijoles refritos {mexicke stouchane fazole}, salatek 145</li><li>Peceny filet z cerstveho nilskeho okouna s peruanskou cibulovou salsou, frijoles refritos, salatek 175</li><li>Nam prik ong – pikantni thajske opekane veprove s rajcaty, krevetovou pastou, koriandrem a chilli, thajska lepkava ryze, salatek 145</li><li>Grilovane medailonky z hoveziho krku {argentina – angus} s peprovou omackou, gratinovane brambory, salatek {L} 175</li><li>Zapecene zampiony plnene gaj coj s modrym syrem a cibulkou, stouchane brambory s creme fraiche, salatek 145</li></ol>
+<ol><li>Peceny jihocesky pstruh s citronovym rapikatym celerem, stouchane brambory s porkem a creme fraiche, salatek 145</li><li>Peceny filet z cerstveho norskeho lososa s citronovym rapikatym celerem, stouchane brambory s porkem a creme fraiche, salatek 175</li><li>Coq au vin – kohout na Cabernetu Sauvignon po francouzsku {bez kosti a kuze} s korenovou zeleninou, slaninou, zampiony a divokym korenim, jasminova ryze 145</li><li>Pecena teleci plec s kaparami a citrony, kukuricna polenta, salatek 169</li><li>Javansky opekany tempeh ve sladkokysele omacce se zelenymi fazolkami a zeleninou, jasminova ryze, salatek 145</li></ol>
 </td>
 </tr>
 </table>
